# CPP-Template

./: .clang-format  .gitignore  CMakeLists.txt  test.cpp
src/: dummy.c
